# poetry-demo1

./: README.md  pyproject.toml
tests/: py_dates_diffs.py
