[tool.poetry]
name = "poetry-demo1"
version = "0.1.0"
description = ""
authors = ["Kris Pik <kpiszcz@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
